--- a/Example/Base.lproj/MainMenu.xib
+++ b/Example/Base.lproj/MainMenu.xib
@@ -684,10 +684,10 @@
         <window title="Example" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" animationBehavior="default" id="QvC-M9-y7g">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-            <rect key="contentRect" x="335" y="390" width="482" height="268"/>
+            <rect key="contentRect" x="335" y="390" width="501" height="303"/>
             <rect key="screenRect" x="0.0" y="0.0" width="1680" height="1027"/>
-            <view key="contentView" wantsLayer="YES" misplaced="YES" id="EiT-Mj-1SZ">
-                <rect key="frame" x="0.0" y="0.0" width="482" height="268"/>
+            <view key="contentView" wantsLayer="YES" id="EiT-Mj-1SZ">
+                <rect key="frame" x="0.0" y="0.0" width="528" height="236"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="BCg-al-2lj">
@@ -750,8 +750,8 @@
                             <action selector="displayWhatsNewIfNeeded:" target="GDn-yg-4pq" id="fWX-Dh-ACj"/>
                         </connections>
                     </button>
-                    <button verticalHuggingPriority="750" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="W6d-eF-wlH">
-                        <rect key="frame" x="14" y="13" width="118" height="32"/>
+                    <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="W6d-eF-wlH">
+                        <rect key="frame" x="14" y="13" width="117" height="32"/>
                         <buttonCell key="cell" type="push" title="Save Update" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="gGI-Wb-xbZ">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                             <font key="font" metaFont="system"/>
@@ -760,8 +760,8 @@
                             <action selector="saveUpdate:" target="GDn-yg-4pq" id="Xn1-c7-Zw1"/>
                         </connections>
                     </button>
-                    <button verticalHuggingPriority="750" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gi2-le-161">
-                        <rect key="frame" x="134" y="13" width="193" height="32"/>
+                    <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="gi2-le-161">
+                        <rect key="frame" x="133" y="13" width="193" height="32"/>
                         <buttonCell key="cell" type="push" title="Reset WhatsNew Version" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="ZVn-rT-jum">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                             <font key="font" metaFont="system"/>
@@ -770,8 +770,8 @@
                             <action selector="resetWhatsNewVersion:" target="GDn-yg-4pq" id="6hU-AD-7SY"/>
                         </connections>
                     </button>
-                    <button verticalHuggingPriority="750" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ID8-7r-iiq">
-                        <rect key="frame" x="329" y="13" width="159" height="32"/>
+                    <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="ID8-7r-iiq">
+                        <rect key="frame" x="328" y="13" width="159" height="32"/>
                         <buttonCell key="cell" type="push" title="Reset isFirstLaunch" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="McI-vA-p7V">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                             <font key="font" metaFont="system"/>
@@ -781,15 +781,15 @@
                         </connections>
                     </button>
                     <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="dgm-OX-9pL">
-                        <rect key="frame" x="219" y="151" width="22" height="18"/>
+                        <rect key="frame" x="219" y="151" width="34" height="18"/>
                         <buttonCell key="cell" type="check" bezelStyle="regularSquare" imagePosition="left" enabled="NO" state="on" inset="2" id="ABj-rb-SyF">
                             <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                             <font key="font" metaFont="system"/>
                         </buttonCell>
                     </button>
-                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="TJc-rz-vJp">
+                    <textField horizontalHuggingPriority="249" verticalHuggingPriority="751" verticalCompressionResistancePriority="751" translatesAutoresizingMaskIntoConstraints="NO" id="TJc-rz-vJp">
                         <rect key="frame" x="18" y="92" width="492" height="40"/>
-                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" id="gvL-2s-uP2">
+                        <textFieldCell key="cell" sendsActionOnEndEditing="YES" id="gvL-2s-uP2">
                             <font key="font" metaFont="systemMedium" size="13"/>
                             <string key="title">This was your first launch. Update notices won't appear. To see the notice,
 use "Reset WhatsNew Version" and "Display If Needed", or start the app again.</string>
@@ -813,6 +813,7 @@ use "Reset WhatsNew Version" and "Display If Needed", or start the app again.</s
                     <constraint firstItem="8u6-es-tDk" firstAttribute="top" secondItem="TJc-rz-vJp" secondAttribute="bottom" constant="20" id="Vh8-25-Drg"/>
                     <constraint firstItem="in8-vm-cMa" firstAttribute="leading" secondItem="BCg-al-2lj" secondAttribute="leading" id="Xw7-wD-vpA"/>
                     <constraint firstItem="W6d-eF-wlH" firstAttribute="top" secondItem="8u6-es-tDk" secondAttribute="bottom" constant="10" id="XzE-pn-kb8"/>
+                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="X5q-ys-RiH" secondAttribute="trailing" constant="20" id="ZQW-wq-kct"/>
                     <constraint firstAttribute="bottom" secondItem="W6d-eF-wlH" secondAttribute="bottom" constant="20" id="Ze1-dz-Pym"/>
                     <constraint firstItem="V4O-Z9-8fF" firstAttribute="top" secondItem="in8-vm-cMa" secondAttribute="bottom" constant="8" id="Zxg-gT-yNh"/>
                     <constraint firstItem="X5q-ys-RiH" firstAttribute="baseline" secondItem="8u6-es-tDk" secondAttribute="baseline" id="a5D-f1-QEa"/>
@@ -828,11 +829,13 @@ use "Reset WhatsNew Version" and "Display If Needed", or start the app again.</s
                     <constraint firstItem="PWX-pJ-Vx3" firstAttribute="leading" secondItem="BCg-al-2lj" secondAttribute="trailing" constant="10" id="oVs-ZZ-cjQ"/>
                     <constraint firstItem="BCg-al-2lj" firstAttribute="trailing" secondItem="in8-vm-cMa" secondAttribute="trailing" id="pda-Lq-Nrx"/>
                     <constraint firstItem="W6d-eF-wlH" firstAttribute="leading" secondItem="BCg-al-2lj" secondAttribute="leading" id="qTN-4w-IdT"/>
-                    <constraint firstAttribute="trailing" secondItem="ID8-7r-iiq" secondAttribute="trailing" constant="20" id="tHw-Rt-Vnt"/>
+                    <constraint firstItem="gpP-56-eaa" firstAttribute="trailing" secondItem="PWX-pJ-Vx3" secondAttribute="trailing" id="rTs-ZF-ayT"/>
+                    <constraint firstItem="dgm-OX-9pL" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="gpP-56-eaa" secondAttribute="trailing" id="s6x-gA-w77"/>
+                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="ID8-7r-iiq" secondAttribute="trailing" constant="20" id="tHw-Rt-Vnt"/>
                     <constraint firstItem="BCg-al-2lj" firstAttribute="top" secondItem="EiT-Mj-1SZ" secondAttribute="top" constant="20" id="z1v-HE-JUq"/>
                 </constraints>
             </view>
-            <point key="canvasLocation" x="118" y="165"/>
+            <point key="canvasLocation" x="103" y="273"/>
         </window>
         <customObject id="GDn-yg-4pq" customClass="AppWindowController" customModule="Example" customModuleProvider="target">
             <connections>
