--- a/Example/WhatsNew_v1_8_0.xib
+++ b/Example/WhatsNew_v1_8_0.xib
@@ -13,7 +13,7 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <customView misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gKT-zZ-sP4" customClass="UpdateView" customModule="WhatsNewKit">
+        <customView translatesAutoresizingMaskIntoConstraints="NO" id="gKT-zZ-sP4">
             <rect key="frame" x="0.0" y="0.0" width="551" height="290"/>
             <subviews>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="zV7-0r-XFk">
