--- a/Example/WhatsNew_v2_2_0.xib
+++ b/Example/WhatsNew_v2_2_0.xib
@@ -13,7 +13,7 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <customView translatesAutoresizingMaskIntoConstraints="NO" id="15V-L1-bwn" customClass="UpdateView" customModule="WhatsNewKit">
+        <customView translatesAutoresizingMaskIntoConstraints="NO" id="15V-L1-bwn">
             <rect key="frame" x="0.0" y="0.0" width="473" height="264"/>
             <subviews>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="POz-sX-Rtf">
